Fix misaligned simulation map

--- a/webserver/public/css/main.scss
+++ b/webserver/public/css/main.scss
@@ -35,6 +35,12 @@
   color: white;
 }
 
+nav input {
+  margin: 0 !important;
+  width: 95% !important;
+  height: 2rem !important;
+}
+
 nav ul button.btn {
     margin-top: -2px;
     margin-left: 15px;
